--- a/smokyMountain/source.css
+++ b/smokyMountain/source.css
@@ -2,7 +2,6 @@
     color: grey;
     background-color: rgb(73, 76, 79);
 }
-
 /*hr {
     position: relative;
     margin-top: 132px;
@@ -26,8 +25,12 @@
 }
 
 .space.horizontal {
-    margin-left: 900px;
-    padding-top: 42px;
+    /*margin-left: 900px;*/
+    
+    margin-left: 55%;
+    /*padding-top: 42px;*/
+    
+    padding-top: 5%;
     transition: color 0.4s ease;
 }
 
@@ -45,7 +48,9 @@
 }
 
 .horizontal.minutegap {
-    padding-left: 25px;
+    /*padding-left: 25px;*/
+    
+    padding-left: 5%;
     cursor: pointer;
     transition: color 0.7s ease;
 }
@@ -54,14 +59,15 @@
     color: green;
     font-size: 30px;
 }
-
+/*overflow added in case content size is more then */
 .general-height {
-    height: 420px;
+    overflow: scroll;
 }
 
 #leftArrow {
     position: absolute;
-    height: 12px;
+    /*height: 12px;*/
+    
     width: 12px;
     float: left;
     z-index: 999;
@@ -74,7 +80,9 @@
 
 #rightArrow {
     position: absolute;
-    height: 12px;
+    /*height: 12px;*/
+    
+    left: 95%;
     width: 12px;
     float: right;
     z-index: 999;
@@ -87,16 +95,20 @@
 
 #footer {
     color: grey;
-    height: 60px;
+    /*height: 60px;*/
+    /*height:12%;*/
+    
     background-color: rgb(73, 76, 79);
 }
 
 #footer div {
     position: relative;
     display: inline-block;
-    top: 50%;
+    top: 23%;
     font-size: 20px;
-    margin-left: 120px;
+    /*margin-left: 120px;*/
+    
+    margin-left: 8%;
     transition: color 0.7s ease;
 }
 
@@ -109,7 +121,9 @@
 .image-height {
     position: relative;
     height: 420px;
-    width: 1333px;
+    /*width: 1333px;*/
+    
+    width: 100%
 }
 
 .contentBoxOne {
@@ -121,18 +135,11 @@
 }
 
 .contentBoxTwo {
-    /*position: relative;
+    position: relative;
     font-size: 33px;
     color: rgb(129, 121, 125);
-    top: 110px;
-    padding-left: 38%;*/
-
-
-    position: relative;
-  font-size: 33px;
-  color: rgb(129, 121, 125);
-  padding-left: 38%;
-  margin-top: 183px;
+    padding-left: 38%;
+    margin-top: 183px;
 }
 
 #secondContentOne div {
@@ -142,12 +149,20 @@
 }
 
 .line-one {
-    height: 20px;
-    width: 704px;
+    /*height: 20px;*/
+    
+    width: 93%;
     position: relative;
     text-align: center;
-    left: -34%;
+    left: -39%;
     margin-bottom: 36px
+}
+
+.line-two {
+    position: relative;
+    top: 15px;
+    width: 70%;
+    left: -7%;
 }
 
 #secondContentTwo div {
@@ -160,9 +175,16 @@
 .horizontal-block-list-view {
     display: inline-block;
     position: relative;
-    top: 80px;
-    margin: 25px;
-    left: 40px;
+    /*top: 80px;*/
+    
+    top: 1%;
+    /*margin: 25px;*/
+    
+    margin: 1%;
+    /*left: 40px;*/
+    
+    left: 12%;
+    width: 33%;
 }
 
 .BiggerText {
@@ -177,7 +199,9 @@
     position: relative;
     text-align: center;
     font-size: larger;
-    width: 306px;
+    /*width: 306px;*/
+    
+    width: 100%;
     max-height: 80px;
     margin-top: 14px;
     color: grey;
@@ -189,7 +213,9 @@
 
 .arrow.right-side {
     position: absolute;
-    left: 1280px;
+    /*left: 1280px;*/
+    
+    left: 1%;
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
     -webkit-transform: scaleX(-1);
@@ -200,7 +226,9 @@
 
 #videoDiv {
     position: relative;
-    margin-top: 10px;
+    /*margin-top: 10px;*/
+    
+    margin-top: 1%;
 }
 /*
 #howWeDo {
@@ -209,10 +237,114 @@
     background-image: url(./resource/color_image_4.jpg);
 }
 */
-.map{
-    margin-top: 30px;
-    width:50%;
-    height:380px;
-    left: 18%;
 
+.map {
+    margin-top: 30px;
+    width: 100%;
+    height: 380px;
+}
+
+#address {
+    color: grey;
+    /*height: 60px;*/
+    
+    background-color: rgb(73, 76, 79);
+}
+
+#address div {
+    position: relative;
+    display: inline-block;
+    top: 50%;
+    font-size: 20px;
+    margin-left: 185px;
+    transition: color 0.7s ease;
+}
+
+/*media query to handle different screen size*/
+@media only screen and (max-width: 716px) {
+
+    .space.horizontal {
+        margin-left: 25%;
+        padding-top: 5%;
+    }
+    .general-height {
+        /*height: 420px;*/
+        /*height: 83%;*/
+    }
+    #leftArrow {
+        top: 100px;
+    }
+    #rightArrow {
+        top: 100px;
+        left: 90%;
+    }
+    #footer div {
+        margin: 2%;
+    }
+    .image-height {
+        position: relative;
+        height: 210px;
+    }
+    .contentBoxOne {
+        top: 60px;
+    }
+    .contentBoxTwo {
+        margin-top: 160px;
+    }
+    .line-one {
+        left: -30%;
+    }
+    .line-two {
+        width: 100%;
+        left: -90px;
+        text-align: center;
+    }
+    #secondContentTwo div {
+        margin: 25px;
+    }
+    .horizontal-block-list-view.thirdBlock {
+        width: 80%;
+    }
+    .BiggerText {
+        position: relative;
+        text-align: center;
+        font-size: x-large;
+        color: rgb(87, 81, 81);
+        margin-top: 12px;
+    }
+    .SmallerText {
+        position: relative;
+        text-align: center;
+        font-size: larger;
+        /*width: 306px;*/
+        
+        width: 100%;
+        max-height: 80px;
+        margin-top: 14px;
+        color: grey;
+    }
+    .arrow {
+        height: 52px;
+    }
+    .arrow.right-side {
+        position: absolute;
+        /*left: 1280px;*/
+        
+        left: 1%;
+        -moz-transform: scaleX(-1);
+        -o-transform: scaleX(-1);
+        -webkit-transform: scaleX(-1);
+        transform: scaleX(-1);
+        filter: FlipH;
+        -ms-filter: "FlipH";
+    }
+    #videoDiv {
+        position: relative;
+        /*margin-top: 10px;*/
+        
+        margin-top: 1%;
+    }
+    #address div {
+        margin-left: 40px;
+    }
 }
